# SecretSanta

./: .pre-commit-config.yaml  LICENSE  pyproject.toml  setup.cfg
src/secretsanta/santa/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
src/secretsanta/santa/migrations/: 0001_initial.py
src/secretsanta/secretsanta/: asgi.py  settings.py  urls.py  wsgi.py
tests/: pytest.ini
tests/santa/: test_utils.py
