[metadata]
name = SecretSanta
author = George Karalis
author_email = georgekaralis7@gmail.com
maintainer = George Karalis
maintainer_email = georgekaralis7@gmail.com
description = Secret Santa made easy

[options]
package_dir =
    =src
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.12
setup_requires =
    setuptools-scm
install_requires =
    django-oauth-toolkit
    django

[options.packages.find]
where = src
exclude = build*, tests, tests.*

[check-manifest]
ignore = .mailmap
